<resources>
    <string name="app_name">BOLD 360 AI</string>

    <string name="action_settings">Settings</string>
    <string name="history_size_format">History size: %d</string>
    <string name="use_the_default_demo_details">Use defaults</string>
    <string name="start_bold_360_ai">Start Bold 360 AI</string>
    <string name="start_chat">Start Chat</string>

    <string name="department_code">Department Code</string>
    <string name="end_bold_chat">End live chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_name">jio</string>
    <string name="kb">Staging_Updated</string>
    <string name="server">qa07</string>
    <string name="api_key">8bad6dea-8da4-4679-a23f-b10e62c84de8</string>
    <string name="access_key">2300000001700000000:2279148490312878292:grCCPGyzmyITEocnaE+owvjtbasV16eV</string>

    <string name="account_hint">Account Name</string>
    <string name="kb_hint">Knowledge Base</string>
    <string name="server_hint">Server</string>
    <string name="api_key_hint">API Key</string>
    <string name="access_key_hint">Access Key</string>
    <string name="context_name">Context Name</string>
    <string name="context_value">Context Value</string>
    <string name="add_context">Add Context</string>
    <string name="bot_context_list"><u>Bot Context list:</u></string>

</resources>
