<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/form_root"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center_horizontal"
              android:background="@drawable/bg"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:padding="10dp"
              android:animateLayoutChanges="true">

    <ScrollView android:id="@+id/scroller"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:orientation="vertical">

            <LinearLayout
                    android:id="@+id/bot_fields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/account_name_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextInputLayoutAppearance"
                        android:hint="@string/account_hint">

                    <EditText
                            android:id="@+id/account_name_edit_text"
                            style="@style/TextInputTextAppearance"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/knowledgebase_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        style="@style/TextInputLayoutAppearance"
                        android:hint="@string/kb_hint">


                    <EditText
                            android:id="@+id/knowledgebase_edit_text"
                            style="@style/TextInputTextAppearance"/>

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                        android:id="@+id/server_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        style="@style/TextInputLayoutAppearance"
                        android:hint="@string/server_hint">


                    <EditText
                            android:id="@+id/server_edit_text"
                            style="@style/TextInputTextAppearance"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/api_key_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    style="@style/TextInputLayoutAppearance"
                    android:hint="@string/api_key_hint">


                <EditText
                        android:id="@+id/api_key_edit_text"
                        style="@style/TextInputTextAppearance"/>

            </android.support.design.widget.TextInputLayout>

            <TextView android:id="@+id/context_title"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/bot_context_list"
                      android:textSize="18sp"
                      android:textColor="@color/chat_form_field_hint"
                      android:layout_marginTop="12dp"
                      android:layout_marginStart="8dp"
                      android:visibility="gone"/>

            <com.conversation.demo.forms.LinearContext android:id="@+id/bot_context"
                                                       android:layout_width="match_parent"
                                                       android:layout_height="wrap_content"
                                                       android:orientation="vertical"
                                                       android:layout_marginTop="10dp">
                <Button android:id="@+id/add_context"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="6dp"
                        android:text="@string/add_context"/>
            </com.conversation.demo.forms.LinearContext>

        </LinearLayout>
    </ScrollView>

    <Button
            android:id="@+id/start_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/start_chat"
            android:scaleType="fitXY"
            android:text="@string/start_chat"
            style="@style/ChatFormButtons"/>

</LinearLayout>

